--- a/demoapp/demoapp.web/Views/Home/Index.cshtml
+++ b/demoapp/demoapp.web/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">nice working with you all ....keep learning  keep going</h1>
+    <h1 class="display-4">nice working with you all ....keep learning  keep going........HAPPY NEW YEAR</h1>
     <h1 class="display-4">HAPPY NEW YEAR</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
